<resources>
    <string name="app_name" translatable="false">Application1</string>
    <string name="toolbar_tittle" translatable="false">CE-1257218</string>
    <string name="first_image" translatable="false">http://dl1.joxi.net/drive/0011/3877/753445/160321/6bdec852e5.jpg</string>
    <string name="second_image" translatable="false">http://dl1.joxi.net/drive/0011/3877/753445/160321/a2949df589.jpg</string>
    <string name="tittle">Комунальне господарство</string>
    <string name="status">В роботi</string>
    <string name="created">Створено</string>
    <string name="created_date">25 лютого 2016</string>
    <string name="registered">Зареєстровано</string>
    <string name="register_date">26 лютого 2016</string>
    <string name="resolve">Вирiшити до</string>
    <string name="resolve_date">29 лютого 2016</string>
    <string name="responsible">Вiдповiдальний</string>
    <string name="responsible_text">Днiпропетровський МВК()</string>
    <string name="note">Открытый люк (возле рекламного счита), район поворота 18 и 19 трамваев на проспект Мира с Донецкого шоссе</string>
</resources>