<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/colorFon">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tittle"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_rectangle"
                android:text="@string/status"
                android:textColor="@color/colorWhite"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created" />

                <TextView
                    android:id="@+id/tv_created_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/created_date"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_registered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registered" />

                <TextView
                    android:id="@+id/tv_reg_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/register_date"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_resolve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resolve" />

                <TextView
                    android:id="@+id/tv_resolve_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/resolve_date"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/tv_responsible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/responsible" />

                <TextView
                    android:id="@+id/tv_resp_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:text="@string/responsible_text"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/note"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/card_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:scrollbars="horizontal" />
        </LinearLayout>
    </ScrollView>

    <!-- [Comment] Hardcode -->
    <!-- [Comment] Use styles -->

</RelativeLayout>
